Missing Data-Block node crashes Blender 2.8 #62289

Closed
opened 2019-03-06 23:38:03 +01:00 by YAFU · 5 comments

System Information
Operating system: Kubuntu Linux 18.04
Graphics card: GTX 960

Blender Version
Broken:
3fc7d51ed3
Short description of error
I have no idea how this "Missing data block" node appeared in an old .blend file of mine (perhaps an old uninstalled addon). Anyway, it is crashing Blender 2.8.
Missing_data_block_Crash.blend

# Blender 2.80 (sub 47), Commit date: 2019-03-06 13:59, Hash 3fc7d51ed3d3

# backtrace
/media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(BLI_system_backtrace+0x1d) [0x1bb7e3d]
/media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender() [0x115b459]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f7fb7729f20]
/media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender() [0x1913847]
/media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(BKE_texpaint_slot_refresh_cache+0x38) [0x1915308]
/media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(ED_render_id_flush_update+0xa4) [0x1457b74]
/media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(_ZN3DEG23deg_graph_flush_updatesEP4MainPNS_9DepsgraphE+0x81f) [0x1bd864f]
/media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(BKE_scene_graph_update_tagged+0x84) [0x1997b24]
/media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(wm_event_do_depsgraph+0xd8) [0x115f3d8]
/media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(wm_event_do_refresh_wm_and_depsgraph+0x85) [0x115f475]
/media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(wm_event_do_notifiers+0x472) [0x1166182]
/media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(WM_main+0x28) [0x115be78]
/media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(main+0x30a) [0x10c197a]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f7fb770cb97]

Exact steps for others to reproduce the error
Open the Missing_data_block_Crash.blend file. Change the display mode, for example to Wireframe mode or LookDev mode. Blender Crash

**System Information** Operating system: Kubuntu Linux 18.04 Graphics card: GTX 960 **Blender Version** Broken: 3fc7d51ed3d3 **Short description of error** I have no idea how this "Missing data block" node appeared in an old .blend file of mine (perhaps an old uninstalled addon). Anyway, it is crashing Blender 2.8. [Missing_data_block_Crash.blend](https://archive.blender.org/developer/F6775041/Missing_data_block_Crash.blend) ``` # Blender 2.80 (sub 47), Commit date: 2019-03-06 13:59, Hash 3fc7d51ed3d3 # backtrace /media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(BLI_system_backtrace+0x1d) [0x1bb7e3d] /media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender() [0x115b459] /lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f7fb7729f20] /media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender() [0x1913847] /media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(BKE_texpaint_slot_refresh_cache+0x38) [0x1915308] /media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(ED_render_id_flush_update+0xa4) [0x1457b74] /media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(_ZN3DEG23deg_graph_flush_updatesEP4MainPNS_9DepsgraphE+0x81f) [0x1bd864f] /media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(BKE_scene_graph_update_tagged+0x84) [0x1997b24] /media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(wm_event_do_depsgraph+0xd8) [0x115f3d8] /media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(wm_event_do_refresh_wm_and_depsgraph+0x85) [0x115f475] /media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(wm_event_do_notifiers+0x472) [0x1166182] /media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(WM_main+0x28) [0x115be78] /media/Disk_1/@Blender 2.8/blender-2.80-3fc7d51ed3d3-linux-glibc224-x86_64/blender(main+0x30a) [0x10c197a] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f7fb770cb97] ``` **Exact steps for others to reproduce the error** Open the Missing_data_block_Crash.blend file. Change the display mode, for example to Wireframe mode or LookDev mode. Blender Crash
Author

Added subscriber: @YAFU

Added subscriber: @YAFU

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-03-07 11:28:33 +01:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x00005555581f067c in count_texture_nodes_recursive (nodetree=0x0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/material.c:1038
1038		for (bNode *node = nodetree->nodes.first; node; node = node->next) {
(gdb) bt
#0  0x00005555581f067c in count_texture_nodes_recursive (nodetree=0x0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/material.c:1038
#1  0x00005555581f06ea in count_texture_nodes_recursive (nodetree=0x7fffced8a808)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/material.c:1044
#2  0x00005555581f0946 in BKE_texpaint_slot_refresh_cache (ma=0x7fffcb976108)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/material.c:1092
#3  0x0000555557829f5a in material_changed (UNUSED_bmain=0x7fffcf382a08, ma=0x7fffcb976108)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/render/render_update.c:209
#4  0x000055555782a218 in ED_render_id_flush_update (update_ctx=0x7fffffffd940, id=0x7fffcb976108)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/render/render_update.c:289
#5  0x00005555586ae355 in DEG::deg_editors_id_update (update_ctx=0x7fffffffd940, id=0x7fffcb976108)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph_update.cc:38
#6  0x00005555586d72c1 in DEG::(anonymous namespace)::flush_editors_id_update (graph=0x7fffea011908, update_ctx=0x7fffffffd940)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_flush.cc:279
#7  0x00005555586d7be9 in DEG::deg_graph_flush_updates (bmain=0x7fffcf382a08, graph=0x7fffea011908)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_flush.cc:401
#8  0x00005555586adff9 in DEG_graph_flush_update (bmain=0x7fffcf382a08, depsgraph=0x7fffea011908)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph_tag.cc:722
#9  0x00005555582c9d55 in BKE_scene_graph_update_tagged (depsgraph=0x7fffea011908, bmain=0x7fffcf382a08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/scene.c:1493
#10 0x0000555557220588 in wm_event_do_depsgraph (C=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:341
#11 0x000055555722066d in wm_event_do_refresh_wm_and_depsgraph (C=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:366
#12 0x0000555557220ead in wm_event_do_notifiers (C=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:524
- 13 0x000055555721c72b in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:421
- 14 0x0000555557216e54 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505

@brecht feel free to re-assign if this is not for you.

Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x00005555581f067c in count_texture_nodes_recursive (nodetree=0x0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/material.c:1038 1038 for (bNode *node = nodetree->nodes.first; node; node = node->next) { (gdb) bt #0 0x00005555581f067c in count_texture_nodes_recursive (nodetree=0x0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/material.c:1038 #1 0x00005555581f06ea in count_texture_nodes_recursive (nodetree=0x7fffced8a808) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/material.c:1044 #2 0x00005555581f0946 in BKE_texpaint_slot_refresh_cache (ma=0x7fffcb976108) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/material.c:1092 #3 0x0000555557829f5a in material_changed (UNUSED_bmain=0x7fffcf382a08, ma=0x7fffcb976108) at /home/zed/programmering/blender_master/blender/source/blender/editors/render/render_update.c:209 #4 0x000055555782a218 in ED_render_id_flush_update (update_ctx=0x7fffffffd940, id=0x7fffcb976108) at /home/zed/programmering/blender_master/blender/source/blender/editors/render/render_update.c:289 #5 0x00005555586ae355 in DEG::deg_editors_id_update (update_ctx=0x7fffffffd940, id=0x7fffcb976108) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph_update.cc:38 #6 0x00005555586d72c1 in DEG::(anonymous namespace)::flush_editors_id_update (graph=0x7fffea011908, update_ctx=0x7fffffffd940) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_flush.cc:279 #7 0x00005555586d7be9 in DEG::deg_graph_flush_updates (bmain=0x7fffcf382a08, graph=0x7fffea011908) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_flush.cc:401 #8 0x00005555586adff9 in DEG_graph_flush_update (bmain=0x7fffcf382a08, depsgraph=0x7fffea011908) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph_tag.cc:722 #9 0x00005555582c9d55 in BKE_scene_graph_update_tagged (depsgraph=0x7fffea011908, bmain=0x7fffcf382a08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/scene.c:1493 #10 0x0000555557220588 in wm_event_do_depsgraph (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:341 #11 0x000055555722066d in wm_event_do_refresh_wm_and_depsgraph (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:366 #12 0x0000555557220ead in wm_event_do_notifiers (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:524 - 13 0x000055555721c72b in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:421 - 14 0x0000555557216e54 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505 ``` @brecht feel free to re-assign if this is not for you.

This issue was referenced by a280867ac2

This issue was referenced by a280867ac2ed924e25f72d020c004b83044a1f51

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62289
No description provided.