Fix T62289: crash with texture paint slots and missing node group datablock.